[package]
name = "tuple-arity"
description = "Get the arity (number of elements) of tuple types with 0-12 elements"
keywords = ["tuple", "tuples", "arity", "generic", "trait"]
repository = "https://github.com/TheBerkin/tuple-arity"
readme = "README.md"
license = "MIT"
version = "0.1.3"
authors = ["Nicholas Fleck <TheBerkin@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]